k8s/app-proyectos.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-proyectos-deployment
  labels:
    app: app-proyectos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-proyectos
  template:
    metadata:
      labels:
        app: app-proyectos
    spec:
      containers:
        - name: app-proyectos
          image:  projectint.azurecr.io/app-proyectos:latest
          ports:
            - containerPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: app-proyectos-service
spec:
  selector:
    app: app-proyectos
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
  type: ClusterIP
