k8s/app-usuarios.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-usuarios-deployment
  labels:
    app: app-usuarios
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-usuarios
  template:
    metadata:
      labels:
        app: app-usuarios
    spec:
      containers:
        - name: app-usuarios
          image:  proyectosgestion.azurecr.io/app-usuarios:latest
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: app-usuarios-service
spec:
  selector:
    app: app-usuarios
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
