k8s/keycloak.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: projectint.azurecr.io/keycloak-custom:latest
          args:
            - "start-dev"
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1"
          volumeMounts:
            - name: keycloak-storage
              mountPath: /opt/keycloak/data
      volumes:
        - name: keycloak-storage
          persistentVolumeClaim:
            claimName: keycloak-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: keycloak
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: MC_ProyectoIntegrador_proyectoCluster_westus
spec:
  type: LoadBalancer
  loadBalancerIP: 13.64.75.47
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
